--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -34,6 +34,17 @@ $thumbnailWidthSmall: 2rem;
   overflow-wrap: anywhere;
 }
 
+.comment__list {
+  .comments {
+    .comment {
+      .comment__menu {
+        margin-top: 2px;
+        margin-right: 2px;
+      }
+    }
+  }
+}
+
 .comment__list .card__first-pane > .button {
   margin-left: 3px;
   height: calc(var(--height-button) - 3px);
@@ -333,8 +344,11 @@ $thumbnailWidthSmall: 2rem;
 
 .comment__author--creator {
   padding: 0 3px;
+  height: 18px;
+  margin-top: var(--spacing-s);
   background-color: var(--color-primary);
   border-radius: var(--border-radius);
+  color: var(--color-primary-contrast) !important;
 
   .button__content {
     color: var(--color-primary-contrast);
@@ -345,6 +359,9 @@ $thumbnailWidthSmall: 2rem;
 
   &.button--uri-indicator {
     color: var(--color-primary-contrast);
+  }
+  &:hover {
+    color: var(--color-primary-contrast) !important;
   }
 }
 
@@ -428,10 +445,12 @@ $thumbnailWidthSmall: 2rem;
   border-bottom: 1px solid var(--color-border);
   color: var(--color-text);
 
+  &.no-border {
+    border-bottom: unset;
+  }
+
   &:not(:first-child) {
     margin-top: var(--spacing-xs);
-    padding-top: var(--spacing-xs);
-    border-top: 1px solid var(--color-border);
   }
 
   &:not(:last-child) {
@@ -441,10 +460,12 @@ $thumbnailWidthSmall: 2rem;
 
 .comment__menu-help {
   @extend .help;
-  margin-top: var(--spacing-xs);
-  padding-left: calc(18px + var(--spacing-s));
+  margin-top: 2px;
+  padding-left: calc(16px + var(--spacing-s));
   max-width: 15rem;
   white-space: pre-line;
+  opacity: 0.8;
+  font-size: var(--font-xsmall);
 
   .icon {
     vertical-align: top;
@@ -554,17 +575,32 @@ $thumbnailWidthSmall: 2rem;
 }
 
 .comment__menu-active {
-  padding: var(--spacing-xs);
-  padding-bottom: 0;
   border-top: 1px solid var(--color-border);
-  margin-top: var(--spacing-s);
   display: flex;
   align-items: center;
+  font-size: var(--font-xsmall);
+  margin-top: 0;
+  white-space: pre-line;
+  min-width: 13rem;
+  padding: var(--spacing-xxs);
+  padding-bottom: 0;
+  color: var(--color-text);
 
   .channel-thumbnail {
     margin-right: var(--spacing-xs);
     height: 1.8rem;
     width: 1.8rem;
+  }
+  .comment__menu-channel {
+    margin-right: 0;
+    max-width: 10rem;
+    word-break: break-all;
+    line-clamp: 2;
+    color: var(--color-text);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 }
 
@@ -573,9 +609,44 @@ $thumbnailWidthSmall: 2rem;
   font-size: var(--font-xsmall);
   margin-top: 0;
   max-width: 10rem;
-  white-space: pre-line;
+  word-break: break-all;
+  line-clamp: 2;
   margin-right: var(--spacing-s);
   color: var(--color-text);
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.comment__menu-target {
+  display: flex;
+  align-items: center;
+  background-color: var(--color-header-background);
+  font-size: var(--font-xsmall);
+  margin-top: 0;
+  white-space: pre-line;
+  margin-bottom: var(--spacing-xxs);
+  min-width: 13rem;
+  padding: var(--spacing-xxs);
+  color: var(--color-text);
+
+  .channel-thumbnail--xsmall {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  .comment__menu-channel {
+    margin-right: 0;
+    .icon {
+      height: var(--font-xxsmall);
+      margin-left: var(--spacing-xxxs);
+      margin-bottom: -1px;
+    }
+    &:hover {
+      color: var(--color-primary);
+    }
+  }
 }
 
 .comment--blocked {
