--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -222,6 +222,7 @@
   width: 100%;
   height: 100%;
   background-color: black;
+  border-radius: var(--border-radius);
 }
 
 .content__wrapper--floating {
