--- a/ui/scss/component/menu-button.scss
+++ b/ui/scss/component/menu-button.scss
@@ -187,6 +187,10 @@ reach-portal {
   }
 }
 
+.menu__chat-comment {
+  padding: 0 0 var(--spacing-xxs) 0;
+}
+
 .menu__list--comments {
   @extend .menu__list;
 }
