--- a/ui/scss/init/_base-theme.scss
+++ b/ui/scss/init/_base-theme.scss
@@ -145,13 +145,13 @@
   --color-snack-upgrade: var(--color-tertiary);
 
   // Superchat
-  --color-superchat-text: var(--color-black);
-  --color-superchat: var(--color-cost);
-  --color-superchat__light: #fcd34d50;
-  --color-superchat-2: #fde68a;
-  --color-superchat-3: #fef3c7;
-  --color-superchat-3__light: #fef3c750;
-  --color-superchat-4: #fffbeb;
+  --color-hyperchat-text: var(--color-black);
+  --color-hyperchat: #de0050;
+  --color-hyperchat__light: #fcd34d50;
+  --color-hyperchat-2: #fde68a;
+  --color-hyperchat-3: #fef3c7;
+  --color-hyperchat-3__light: #fef3c750;
+  --color-hyperchat-4: #fffbeb;
 
   // Editor
   --color-editor-cursor: var(--color-text);
