--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -360,6 +360,11 @@
   }
 }
 
+.content__cover--purchasable {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
 .content__cover {
   @include thumbnail;
   position: relative;
