Don't show zero stats while fetching
## Issue
Sub count, view count and reactions are incorrectly showing "0" briefly, or stuck there if the fetch fails.

## Reason
Selectors defaulting to 0.

## Change
(1) Apply placeholders or simply not show it (depending on which looks best for each scenario).

(2) To reduce layout shifts, swapped the location of "#uploads" vs "# followers" since the former will always be populated.

--- a/ui/scss/component/_placeholder.scss
+++ b/ui/scss/component/_placeholder.scss
@@ -141,3 +141,13 @@
   @include placeholder;
   height: 60vh;
 }
+
+.reaction-count-placeholder {
+  background-color: var(--color-header-button);
+  width: 2ch;
+}
+
+.file-view-count-placeholder {
+  background-color: var(--color-header-button);
+  width: 10ch;
+}
