--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -86,6 +86,10 @@
     height: calc(100vh - var(--header-height-mobile));
   }
 
+  @media (pointer: coarse) {
+    overflow-y: auto !important;
+  }
+
   ul {
     padding-bottom: var(--spacing-s);
   }
@@ -95,6 +99,7 @@
   }
 }
 
+// No longer necessary if "pointer:coarse" turns out to work fine
 .navigation-touch {
   overflow-y: auto !important;
 }
