Add careers section to the footer, add the first jobs page (#1961)
* Add jobs page

* add careers overview page

* finish it manager page

* cleanup

* styling touchups

* add to sidebar and add mail to link

Co-authored-by: Rafael <rafael.saes@odysee.com>

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -15,6 +15,7 @@
 @import 'component/block-list';
 @import 'component/button';
 @import 'component/card';
+@import 'component/careers';
 @import 'component/channel';
 @import 'component/_textarea-suggestions';
 @import 'component/claim_support_button';
