RemoveComment modal: add a border to help guide the eye
... differentiating between instructions vs. the comment itself

--- a/ui/scss/common/_non-clickable.scss
+++ b/ui/scss/common/_non-clickable.scss
@@ -1,3 +1,9 @@
 .non-clickable {
   pointer-events: none;
 }
+
+// TODO: temp parking space until we have a util file
+.border-std {
+  border: 1px solid var(--color-border);
+  border-radius: var(--card-radius);
+}
