add subtitles and fix links (#1965)

--- a/ui/scss/component/_careers.scss
+++ b/ui/scss/component/_careers.scss
@@ -11,3 +11,8 @@
 .careers-mail-link {
   color: rgba(var(--color-text-base), 0.8);
 }
+
+.career-page__subtitle {
+  margin-top: 17px;
+  font-size: 19px;
+}
